Fixed whitespace when uploading picture
Background wasn't updating to account for expanded box size when an account picture was uploaded.

--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -10,7 +10,7 @@
   width: 100%;
   height: 100%;
   background-size: 100%;
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
   background-image: url(https://anotherangle.eu/wp-content/uploads/2017/03/Geisel-Library-South-2048.jpg);
   position: absolute;
 }
